sentences and terms

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5295,13 +5295,10 @@ defined if $sem(\Gamma,\syntax{OMS})$ is a singleton.
 If \syntax{ConsStrength} is \syntax{definitional}, the semantics is only
 defined if $sem(\Gamma,\syntax{OMS})$ is a singleton.
 
-\semdom{sem^M(\syntax{oms-ref , OMSRef})= \Gamma(\syntax{OMSRef})}
 
-\semdom{sem^M(\syntax{oms-ref , OMSRef, ImportName}) = \Gamma(\syntax{OMSRef})}
+$$sem(\Gamma, \syntax{OMSRef})= \Gamma(\syntax{OMSRef})$$
 
-Note that $\Gamma(\syntax{OMSRef})$ may be undefined. That is, if a
-reference (IRI) to an OMS is not defined, the semantics of the
-enclosing DOL construct is undefined.
+\todonote{what about \syntax{ImportName}?}
 
 %%%%%%%%%%%%%%%%%%%%%%%
 
@@ -5311,9 +5308,15 @@ enclosing DOL construct is undefined.
 
 \semdom{sem(\syntax{SymbolOrMap})}
 
-\semdom{sem(\syntax{Term})}
+\semdom{sem(\Gamma,\Sigma,\syntax{Term}) = t}
 
-\semdom{sem(\syntax{Sentence})}
+$$sem(\Gamma, \Sigma, \syntax{Term}) = t$$
+\noindent where $t$ is a $\Sigma$-term and the analysis is done in a logic-specific way. 
+
+\semdom{sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi}
+
+$$sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi$$
+\noindent where $\varphi\in Sen(\Sigma)$ and the analysis is done in a logic-specific way.
 
 \semdom{sem(\syntax{LolaRef})}
 
